fixed form spacing

--- a/src/index.css
+++ b/src/index.css
@@ -89,19 +89,6 @@ body {
 .sort-bar {
   padding-bottom: 2em;
 }
-
-.email-field {
-  padding-top: 1em;
-  padding-bottom: 1.5em;
-}
-
-.notes-form-btn {
-  margin-top: 0.5em;
-}
-
-.notes-form {
-  margin-top: 1em;
-}
 /* end of pills pages - sort misc fields */
 
 /* pills pages - building cards and info windows */
